# ShanghAI2014-Koan7

./: .gitignore  README.md
controllers/LocomotionController/: LocomotionController.c  LocomotionController.py  module_1.txt  module_2.txt  module_3.txt  module_4.txt  module_5.txt  module_6.txt  module_7.txt  module_8.txt
controllers/LocomotionSupervisor/: LocomotionSupervisor.c  LocomotionSupervisor.py
evolution/: CMakeLists.txt
evolution/config/: evolution_parameters.xml
evolution/src/: CMakeLists.txt  ModularRobotEvalOp.cpp  ModularRobotEvalOp.h  dummy_answer.cpp  evolve_gaits.cpp
worlds/: koan7.wbt
